@@ -1,3 +1,11 @@
+2007-02-01  Petr Ovtchenkov  <complement@users.sourceforge.net>
+
+	* stlport/stl/config/_solaris.h: __LONG_MAX__ defined on
+	64-bits SPARCs. Thanks Aleksey Sanin.
+
+	* stlport/stl/_sparc_atomic.h, stlport/stl/_threads.h: fixes
+	for modern SPARCs. Thanks Aleksey Sanin.
+
 2007-01-28  Francois Dumont  <dums@stlport...>
 
 	* stlport/stl/debug/_deque.h: Fix iterator invalidation in erase
